tools/flowc/tests/errors/error28.flow
import fusion;

main() {
	a = DLink(0, DEnd(), DEnd(), false);
	b = FSelect(const(0), FLift(idfn), FDestroyed());
}
